--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "*",
+    "@netlify/functions": "^2.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
