--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "dev:api": "node server/index.js"
+    "dev:api": "node server/index.js",
+    "start": "node server/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
